# chip8-emulator

./: CMakeLists.txt
src/: main.cpp
src/cpu/: cpu.cpp  cpu.hpp
src/display/: screen.cpp  screen.hpp
src/input/: keyboard.cpp  keyboard.hpp
